--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: E2kon7JmCmezzwWhMy084Sl21nnBBuRIaOMHXrXFGkvEc6T3IBZb6Iq93UaQCJj7vfBNlycG7mQix29tITDZ4tugLKi2aljpquMsgHi1jeZRIOkiVLiHhQb19K8PplFr6TlHfk6TrsvU1mhC88Uy/4ZJxHNSW0LQGJz3joz4TYI=
+    secure: DkwjnQ6ZbLtmXFNLxp98+A/k3upVCyp8vbVonx2Ff1g0p+rxTFMhFxKtLwRr2Ie3QEno06uNubqIw7jeaqPoafeYojDsgnJiXxXyhM1/jhZwcY7qb3IveWb2NRmFmIz/uVEuQyc6k1WkkHIyIj4UoG3A0NdfImgD84FWiayE+K0=
