--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: DkwjnQ6ZbLtmXFNLxp98+A/k3upVCyp8vbVonx2Ff1g0p+rxTFMhFxKtLwRr2Ie3QEno06uNubqIw7jeaqPoafeYojDsgnJiXxXyhM1/jhZwcY7qb3IveWb2NRmFmIz/uVEuQyc6k1WkkHIyIj4UoG3A0NdfImgD84FWiayE+K0=
+    secure: Q4YIa8pKZv7ZBJn0KCYEmks54ylIxNaCQQnp4wv9EiI1eju9zKQfKCEcK52mntKcqWUQax7ULK9mJjhQDzFZMUEc24FFbIkbt7b/PPfGGd1HKSILDbPNpcdBHo+N8sLSwVnqqK+/iMM8lCXItMhiXu0uo+fhkycm8vl+z+pYYAg=
